# 3DViewer

./: .gitignore  CMakeLists.txt  scheme.drawio
shaders/edges/: geom.glsl  vert.glsl
shaders/faces/: vert.glsl
src/: CMakeLists.txt  CMakePresets.json  Doxyfile  SceneDrawer.cpp  SceneObjectOpenGL.cpp  SceneSettings.cpp  main.cpp  mainpage.md  resources.qrc
src/CmakeModules/: CodeCoverage.cmake  FindCheck.cmake
src/Controllers/: CMakeLists.txt
src/Controllers/include/public/Controllers/: IIterableController.h  SceneObjectController.h
src/Controllers/includes/Controllers/: IIterableController.h  SceneController.h  TransformableController.h
src/Controllers/src/: SceneController.cpp  SceneObjectController.cpp  TransformableController.cpp
src/Domain/: Camera.cpp  Scene.cpp  SceneSettings.cpp  Texture.cpp  Transform.cpp
src/Models/: CMakeLists.txt
src/Models/include/public/DTO/: Point3D.h  Texture.h  Vertex.h  VisualProperty.h
src/Models/include/public/Models/: ISceneDrawer.h  Scene.h  SceneSettings.h  TransformableObject.h
src/Models/include/public/Models/Light/: DirectedSource.h  LightSource.h
src/Models/include/public/Models/SceneObject/: SceneObject.h
src/Models/includes/DTO/: Color.h  Edge.h  TransformMatrix.h
src/Models/includes/Models/: Scene.h  TransformableObject.h
src/Models/includes/Models/SceneObject/: Model.h  SceneObject.h
src/Models/src/: Scene.cpp  SceneSettings.cpp  TransformableObject.cpp
src/Models/src/DTO/: TransformMatrix.cpp
src/Models/src/Light/: DirectedSource.cpp  LightSource.cpp
src/Models/src/SceneObject/: Model.cpp  SceneObject.cpp
src/OpenGL/: EdgeDrawer.cpp  FaceDrawer.cpp  FloorDrawer.cpp  SceneDrawer.cpp  SceneDrawerHelper.cpp  SceneObject.cpp  VertexDrawer.cpp
src/Services/: CMakeLists.txt
src/Services/include/public/Services/: ISceneFileReader.h  SceneFileData.h  SceneFileOBJReader.h  SceneObjectFactory.h
src/Services/include/public/Services/OpenGL/: SceneObjectOpenGL.h  SceneObjectOpenGLFactory.h  SceneViewOpenGL.h  ShaderDrawer.h
src/Services/include/public/Services/OpenGL/Shaders/: ShaderPaths.h
src/Services/include/public/Services/Parser/: Parser.h
src/Services/includes/Services/: SceneCreator.h  SceneFileOBJReader.h  TransformBuilder.h
src/Services/includes/Services/KD-three/: KDtree.h
src/Services/includes/Services/OpenGL/: DrawerOpenGL.h
src/Services/includes/Services/OpenGL/Shaders/: ShadersStrings.h
src/Services/includes/Services/Parser/: Parser.h
src/Services/includes/Services/PureParser/: Parser.h  Vector.h
src/Services/resources/Shaders/edges/: geom.glsl  vert.glsl
src/Services/resources/Shaders/edges_dotted/: frag.glsl  vert.glsl
src/Services/resources/Shaders/edges_dotted_2/: frag.glsl  geom.glsl
src/Services/resources/Shaders/faces/: frag.glsl  vert.glsl
src/Services/resources/Shaders/faces_with_textures/: vert.glsl
src/Services/resources/Shaders/flat_shading_faces/: frag.glsl  vert.glsl
src/Services/resources/Shaders/pbr/: vert.glsl
src/Services/resources/Shaders/skybox/: vert.glsl
src/Services/resources/Shaders/vertexes/: frag.glsl  geom.glsl  vert.glsl
src/Services/src/: SceneCreator.cpp  SceneFileOBJReader.cpp  SceneObjectFactory.cpp  TransformBuilder.cpp
src/Services/src/KD-three/: KDtree.cpp
src/Services/src/OpenGL/: DrawerOpenGL.cpp  RaytracingDrawer.cpp  SceneObjectOpenGL.cpp  SceneObjectOpenGLFactory.cpp  SceneViewOpenGL.cpp  ShaderDrawer.cpp
src/Services/src/OpenGL/Shaders/edges/: gem_dotted_line.glsl  geom.glsl
src/Services/src/OpenGL/Shaders/edges_dotted/: frag.glsl  vert.glsl
src/Services/src/OpenGL/Shaders/faces/: frag.glsl
src/Services/src/OpenGL/Shaders/faces_with_textures/: frag.glsl  vert.glsl
src/Services/src/Parser/: Parser.cpp
src/Services/src/PureParser/: Parser.c  Vector.c
src/Tests/: CMakeLists.txt
src/Tests/include/Tests/: TestsForParser.h
src/Tests/includes/Tests/: ParserTests.h
src/Tests/src/: ParserTests.c  TestsMain.cpp
src/Views/: CMakeLists.txt
src/Views/include/public/Views/: ISceneView.h  ViewerMainWindow.h
src/Views/include/public/Views/Components/BaseComponents/: CircleSlider.h  StackedWidget.h  TextBox.h  Title.h
src/Views/include/public/Views/Components/Builder/: Builder.h  ConnectionData.h
src/Views/include/public/Views/Components/Composite/: Component.h  Composite.h  ConcreteCompositor.h
src/Views/include/public/Views/Components/CustomComponents/: CustomQOpenGLWidget.h
src/Views/include/public/Views/Components/MenuElements/: EntityInfo.h  IMenu.h  MenuWidget.h
src/Views/include/public/Views/lib/AnchorLayout/: AnchorLayout.h
src/Views/include/public/Views/lib/SlidingStackedWidget/: slidingstackedwidget.h
src/Views/includes/Views/Components/BaseComponents/: Button.h  InfoStackedWidget.h  Label.h  OpenGLWidget.h  ScrollWidget.h  SwitchMenu.h
src/Views/includes/Views/Components/Composite/: Leaf.h
src/Views/includes/Views/Components/CustomComponents/: CustomCircleSlider.h  CustomSwitchMenu.h
src/Views/includes/Views/Components/MenuElements/MenuItems/: CreationMenu.h  SaveMenu.h
src/Views/includes/Views/TmpControllers/: SwitchMenuController.h
src/Views/includes/Views/lib/Gif/: Gif.h
src/Views/resources/Icons/: icon.icns
src/Views/resources/Style/: style.qss
src/Views/src/: ViewerMainWindow.cpp
src/Views/src/Components/BaseComponents/: Button.cpp  CircleSlider.cpp  InfoStackedWidget.cpp  Label.cpp  OpenGLWidget.cpp  ScrollWidget.cpp  StackedWidget.cpp  SwitchMenu.cpp  TextBox.cpp  Title.cpp
src/Views/src/Components/Builder/: Builder.cpp  ConnectionData.cpp
src/Views/src/Components/Composite/: Component.cpp  Composite.cpp  ConcreteCompositor.cpp  Leaf.cpp
src/Views/src/Components/CustomComponents/: CustomCircleSlider.cpp  CustomQOpenGLWidget.cpp  CustomSwitchMenu.cpp
src/Views/src/Components/MenuElements/: EntityInfo.cpp  IMenu.cpp  MenuWidget.cpp
src/Views/src/TmpControllers/: SwitchMenuController.cpp
src/Views/src/lib/AnchorLayout/: AnchorLayout.cpp
src/Views/src/lib/Gif/: Gif.cpp
src/Views/src/lib/SlidingStackedWidget/: slidingstackedwidget.cpp
(+33 files in other folders)
